Wed Jul 28 16:31:58 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: REQ#238対応. 

Tue Jul 27 20:35:50 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: REQ#237対応. DirectMergeSortBufferで 
	  chunk_size を変更できるようにした.

Mon Jul 26 19:08:22 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: REQ#237対応. DirectMergeSortBufferちょっと最適化

Sat Jul 24 00:37:23 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: REQ#237対応. 配列の生成を押さえた版

Fri Jul 23 19:48:52 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: REQ#237対応

Wed Jul 21 17:06:14 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: marshalでエラーが出ることがあるので, その時の
	  処理を追加

Wed Jul 14 18:54:39 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: REQ#235対応 その5(ばぐがいっぱいあった)

Wed Jul 14 16:30:58 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: REQ#235対応 その4(PQに入れる要素を変えた)

Mon Jul 12 03:46:27 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: BUG#234対応(対応をデフォルトにした)

Wed Jun 23 19:24:17 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: REQ#235対応 その3(PriorityQueue2)

Wed Jun 23 17:41:51 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: REQ#235対応 その2(PriorityQueue)

Mon Jun  7 19:22:31 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: REQ#235対応

Mon Jun  7 17:50:52 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bwc.rb: MershaledQueue対応

Mon Jun  7 12:43:32 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* port-marshaled-queue.rb: REQ#233対応
	* n-mod-group-by.rb: BUG#234対応

Wed Jun  2 16:27:19 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* port-marshaled-queue.rb, conf.rb: SizedMarshaledQueue作成

Tue Jun  1 17:22:15 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* port.rb, exception.rb, conf.rb: MershaledQueue対応(REQ#232)
	* port-marshaled-queue.rb: MershaledQueue対応での追加
	